# pr-pilot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AI_Code_Review_Bot_PRD.docx  LICENSE  README.md  prd.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html
docs/: NAIVE_DATETIME_LINTER.md
pr_pilot/: __init__.py  cli.py  config.py  db.py  exceptions.py  github_client.py  llm.py  llm_providers.py  logging_config.py  metrics.py  models.py  redis_budget.py  retry.py  review_summary.py  server.py  worker.py
pr_pilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pr_pilot/linters/: flake8_naive_datetime.py  naive_datetime.py
scripts/: check_naive_datetime.py  start-smee.sh  worker.sh
tests/: test_admin_endpoints.py  test_config.py  test_dashboard.py  test_db.py  test_diff_position.py  test_github_app_auth.py  test_github_client.py  test_llm.py  test_llm_chunking.py  test_llm_chunking_prop.py  test_llm_integration.py  test_llm_json_parsing.py  test_llm_json_parsing_retry.py  test_llm_providers.py  test_llm_unavailable.py  test_logging_config.py  test_naive_datetime_linter.py  test_retry.py  test_review_summary.py  test_server.py  test_server_stream.py  test_worker_context_fetcher.py
