[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-pilot"
version = "0.1.0"
description = "AI Code Review Bot - GitHub App webhook scaffold"
authors = [ { name = "vaish725" } ]
dependencies = [
    "fastapi>=0.95",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
    "PyGithub>=1.59",
    "python-dotenv>=1.0",
    "PyJWT>=2.8",
    "requests>=2.31",
    "redis>=4.7",
    "rq>=1.11",
    "openai>=1.0",  # OpenAI client for GPT models
    "anthropic>=0.19",  # Anthropic client (optional)
    "tiktoken>=0.4",  # token accounting for OpenAI (best-effort)

    "prometheus_client>=0.16",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pre-commit", "flake8", "pytest", "hypothesis"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[project.entry-points]
[project.entry-points."flake8.extension"]
NDT = "pr_pilot.linters.flake8_naive_datetime:NaiveDatetimeChecker"
